Expand tool/security descriptors and add persistence-backed tool state