@@ -12,6 +12,18 @@ import io.mindspice.magenta.runtime.tools.ToolResult;
 import io.mindspice.sjbdc.SimplyJDBC;
 import io.mindspice.sjbdc.SjColumn;
 import io.mindspice.sjbdc.SjResult;
+import net.sf.jsqlparser.JSQLParserException;
+import net.sf.jsqlparser.parser.CCJSqlParserUtil;
+import net.sf.jsqlparser.statement.Statement;
+import net.sf.jsqlparser.statement.Statements;
+import net.sf.jsqlparser.statement.alter.Alter;
+import net.sf.jsqlparser.statement.delete.Delete;
+import net.sf.jsqlparser.statement.drop.Drop;
+import net.sf.jsqlparser.statement.insert.Insert;
+import net.sf.jsqlparser.statement.merge.Merge;
+import net.sf.jsqlparser.statement.select.Select;
+import net.sf.jsqlparser.statement.truncate.Truncate;
+import net.sf.jsqlparser.statement.update.Update;
 import org.sqlite.SQLiteDataSource;
 
 import java.nio.file.Path;
@@ -45,13 +57,19 @@ public final class SqliteTools {
             return ToolPayloads.failure(request, "validation_error", "Missing required arguments: dbPath and sql", null, true);
         }
 
-        List<String> statements = splitStatements(sql);
-        if (statements.size() != 1) {
+        ParsedSql parsedSql;
+        try {
+            parsedSql = parseAndClassify(sql);
+        } catch (JSQLParserException e) {
+            return ToolPayloads.failure(request, "invalid_sql_kind", "sqlite_query SQL parse failed", null, true);
+        }
+
+        if (parsedSql.statements().size() != 1) {
             return ToolPayloads.failure(request, "validation_error", "sqlite_query expects exactly one statement", null, true);
         }
 
-        String statement = statements.get(0);
-        if (detectStatementType(statement) != StatementType.READ) {
+        ParsedStatement parsedStatement = parsedSql.statements().getFirst();
+        if (parsedStatement.type() != StatementType.READ) {
             return ToolPayloads.failure(request, "invalid_sql_kind", "sqlite_query only supports read-only SQL", null, true);
         }
 
@@ -66,6 +84,7 @@ public final class SqliteTools {
             SQLiteDataSource dataSource = sqliteDataSource(dbPath);
             List<String> columns;
             try (Connection connection = dataSource.getConnection()) {
+                String statement = parsedStatement.sql();
                 columns = discoverColumns(connection, statement);
                 if (columns.isEmpty()) {
                     ObjectNode data = MAPPER.createObjectNode();
@@ -128,14 +147,23 @@ public final class SqliteTools {
             return ToolPayloads.failure(request, "validation_error", "Missing required arguments: dbPath and sql", null, true);
         }
 
-        List<String> statements = splitStatements(sql);
-        if (statements.isEmpty()) {
+        ParsedSql parsedSql;
+        try {
+            parsedSql = parseAndClassify(sql);
+        } catch (JSQLParserException e) {
+            return ToolPayloads.failure(request, "invalid_sql_kind", "sqlite_exec SQL parse failed", null, true);
+        }
+
+        if (parsedSql.statements().isEmpty()) {
             return ToolPayloads.failure(request, "validation_error", "No SQL statements provided", null, true);
         }
 
-        for (String statement : statements) {
-            if (detectStatementType(statement) == StatementType.READ) {
+        for (ParsedStatement statement : parsedSql.statements()) {
+            if (statement.type() == StatementType.READ) {
                 return ToolPayloads.failure(request, "invalid_sql_kind", "sqlite_exec does not allow read-only SQL statements", null, true);
+            }
+            if (statement.type() == StatementType.ATTACH || statement.type() == StatementType.PRAGMA || statement.type() == StatementType.UNKNOWN) {
+                return ToolPayloads.failure(request, "invalid_sql_kind", "sqlite_exec blocked unsafe or unsupported SQL statement", null, true);
             }
         }
 
@@ -155,9 +183,10 @@ public final class SqliteTools {
                 connection.setAutoCommit(false);
             }
             try {
-                for (String statement : statements) {
-                    StatementType type = detectStatementType(statement);
-                    SjResult<Integer> updateResult = simplyJDBC.executeUpdate(connection, statement, SimplyJDBC.NO_PARAMS);
+                for (ParsedStatement parsedStatement : parsedSql.statements()) {
+                    StatementType type = parsedStatement.type();
+                    String statementSql = parsedStatement.sql();
+                    SjResult<Integer> updateResult = simplyJDBC.executeUpdate(connection, statementSql, SimplyJDBC.NO_PARAMS);
                     if (updateResult.isFailure()) {
                         String message = updateResult.error().map(Throwable::getMessage).orElse("SQL execution failed");
                         throw new IllegalStateException(message);
@@ -171,7 +200,7 @@ public final class SqliteTools {
                     ObjectNode detail = MAPPER.createObjectNode();
                     detail.put("statementType", type.name().toLowerCase(Locale.ROOT));
                     detail.put("rowsAffected", rows);
-                    detail.put("sql", statement);
+                    detail.put("sql", statementSql);
                     details.add(detail);
                 }
 
@@ -192,7 +221,7 @@ public final class SqliteTools {
 
             ObjectNode data = MAPPER.createObjectNode();
             data.put("dbPath", ToolPathSupport.displayPath(settings.workspaceRoot(), dbPath));
-            data.put("statementCount", statements.size());
+            data.put("statementCount", parsedSql.statements().size());
             data.put("rowsAffected", totalRowsAffected);
             data.put("transactional", transactional);
             data.set("details", details);
@@ -270,168 +299,48 @@ public final class SqliteTools {
         return text.replace("'", "''");
     }
 
-    private List<String> splitStatements(String sql) {
-        List<String> statements = new ArrayList<>();
-        StringBuilder current = new StringBuilder();
-
-        boolean inSingleQuote = false;
-        boolean inDoubleQuote = false;
-        boolean inLineComment = false;
-        boolean inBlockComment = false;
-
-        char[] chars = sql.toCharArray();
-        for (int i = 0; i < chars.length; i++) {
-            char c = chars[i];
-            char next = (i + 1 < chars.length) ? chars[i + 1] : '\0';
-            char prev = (i > 0) ? chars[i - 1] : '\0';
-
-            if (!inSingleQuote && !inDoubleQuote && !inBlockComment && c == '-' && next == '-') {
-                inLineComment = true;
-                current.append(c);
+    private ParsedSql parseAndClassify(String sql) throws JSQLParserException {
+        Statements parsed = CCJSqlParserUtil.parseStatements(sql);
+        List<ParsedStatement> statements = new ArrayList<>();
+        for (Statement statement : parsed.getStatements()) {
+            if (statement == null) {
                 continue;
             }
-            if (inLineComment && c == '\n') {
-                inLineComment = false;
-                current.append(c);
+            String statementSql = statement.toString().trim();
+            if (statementSql.isEmpty()) {
                 continue;
             }
-
-            if (!inSingleQuote && !inDoubleQuote && !inLineComment && c == '/' && next == '*') {
-                inBlockComment = true;
-                current.append(c);
-                continue;
-            }
-            if (inBlockComment && c == '*' && next == '/') {
-                current.append(c).append(next);
-                i++;
-                inBlockComment = false;
-                continue;
-            }
-
-            if (inLineComment || inBlockComment) {
-                current.append(c);
-                continue;
-            }
-
-            if (c == '\'' && prev != '\\') {
-                inSingleQuote = !inSingleQuote;
-            } else if (c == '"' && prev != '\\') {
-                inDoubleQuote = !inDoubleQuote;
-            }
-
-            if (c == ';' && !inSingleQuote && !inDoubleQuote) {
-                String stmt = current.toString().trim();
-                if (!stmt.isEmpty()) {
-                    statements.add(stmt);
-                }
-                current = new StringBuilder();
-            } else {
-                current.append(c);
-            }
+            statements.add(new ParsedStatement(statementSql, classifyStatement(statement, statementSql)));
         }
-
-        String last = current.toString().trim();
-        if (!last.isEmpty()) {
-            statements.add(last);
-        }
-        return statements;
+        return new ParsedSql(List.copyOf(statements));
     }
 
-    private StatementType detectStatementType(String statement) {
-        String normalized = stripLeadingCommentsAndWhitespace(statement);
-        if (normalized.isBlank()) {
-            return StatementType.UNKNOWN;
+    private StatementType classifyStatement(Statement statement, String statementSql) {
+        String upper = statementSql.toUpperCase(Locale.ROOT);
+        if (upper.startsWith("PRAGMA")) {
+            return StatementType.PRAGMA;
+        }
+        if (upper.startsWith("ATTACH") || upper.startsWith("DETACH")) {
+            return StatementType.ATTACH;
         }
 
-        String upper = normalized.toUpperCase(Locale.ROOT);
-        if (upper.startsWith("WITH")) {
-            int insertIndex = findKeywordAfterCte(upper, "INSERT");
-            int updateIndex = findKeywordAfterCte(upper, "UPDATE");
-            int deleteIndex = findKeywordAfterCte(upper, "DELETE");
-            int replaceIndex = findKeywordAfterCte(upper, "REPLACE");
-            int selectIndex = findKeywordAfterCte(upper, "SELECT");
-            int createIndex = findKeywordAfterCte(upper, "CREATE");
-            int dropIndex = findKeywordAfterCte(upper, "DROP");
-            int alterIndex = findKeywordAfterCte(upper, "ALTER");
-
-            int min = Integer.MAX_VALUE;
-            StatementType type = StatementType.UNKNOWN;
-            if (insertIndex != -1 && insertIndex < min) { min = insertIndex; type = StatementType.WRITE; }
-            if (updateIndex != -1 && updateIndex < min) { min = updateIndex; type = StatementType.WRITE; }
-            if (deleteIndex != -1 && deleteIndex < min) { min = deleteIndex; type = StatementType.WRITE; }
-            if (replaceIndex != -1 && replaceIndex < min) { min = replaceIndex; type = StatementType.WRITE; }
-            if (selectIndex != -1 && selectIndex < min) { min = selectIndex; type = StatementType.READ; }
-            if (createIndex != -1 && createIndex < min) { min = createIndex; type = StatementType.DDL; }
-            if (dropIndex != -1 && dropIndex < min) { min = dropIndex; type = StatementType.DDL; }
-            if (alterIndex != -1 && alterIndex < min) { type = StatementType.DDL; }
-            return type;
+        if (statement instanceof Select) {
+            return StatementType.READ;
         }
-
-        if (upper.startsWith("SELECT") || upper.startsWith("PRAGMA")) return StatementType.READ;
-        if (upper.startsWith("INSERT") || upper.startsWith("UPDATE") || upper.startsWith("DELETE") || upper.startsWith("REPLACE")) {
+        if (statement instanceof Insert || statement instanceof Update || statement instanceof Delete
+                || statement instanceof Merge || upper.startsWith("REPLACE")) {
             return StatementType.WRITE;
         }
-        if (upper.startsWith("CREATE") || upper.startsWith("DROP") || upper.startsWith("ALTER")) return StatementType.DDL;
-        if (upper.startsWith("ATTACH") || upper.startsWith("DETACH")) return StatementType.ATTACH;
+        if (statement instanceof Drop || statement instanceof Alter || statement instanceof Truncate
+                || statement.getClass().getName().contains(".statement.create.")) {
+            return StatementType.DDL;
+        }
+
+        if (upper.startsWith("BEGIN") || upper.startsWith("COMMIT") || upper.startsWith("ROLLBACK") || upper.startsWith("SAVEPOINT")) {
+            return StatementType.TRANSACTION;
+        }
+
         return StatementType.UNKNOWN;
-    }
-
-    private String stripLeadingCommentsAndWhitespace(String sql) {
-        String result = sql == null ? "" : sql.trim();
-        boolean changed = true;
-
-        while (changed) {
-            changed = false;
-            if (result.startsWith("--")) {
-                int newline = result.indexOf('\n');
-                if (newline == -1) {
-                    return "";
-                }
-                result = result.substring(newline + 1).trim();
-                changed = true;
-            }
-            if (result.startsWith("/*")) {
-                int end = result.indexOf("*/");
-                if (end == -1) {
-                    return "";
-                }
-                result = result.substring(end + 2).trim();
-                changed = true;
-            }
-        }
-
-        return result;
-    }
-
-    private int findKeywordAfterCte(String sql, String keyword) {
-        int parenDepth = 0;
-        boolean inQuote = false;
-
-        for (int i = 4; i < sql.length() - keyword.length() + 1; i++) {
-            char c = sql.charAt(i);
-            if (c == '\'' && (i == 0 || sql.charAt(i - 1) != '\\')) {
-                inQuote = !inQuote;
-            }
-            if (inQuote) {
-                continue;
-            }
-            if (c == '(') {
-                parenDepth++;
-            } else if (c == ')') {
-                parenDepth = Math.max(0, parenDepth - 1);
-            }
-            if (parenDepth == 0 && sql.startsWith(keyword, i) && isWordBoundary(sql, i, keyword.length())) {
-                return i;
-            }
-        }
-        return -1;
-    }
-
-    private boolean isWordBoundary(String sql, int start, int length) {
-        boolean startBoundary = start == 0 || !Character.isLetterOrDigit(sql.charAt(start - 1));
-        int end = start + length;
-        boolean endBoundary = end >= sql.length() || !Character.isLetterOrDigit(sql.charAt(end));
-        return startBoundary && endBoundary;
     }
 
     private static boolean isBlank(String text) {
@@ -446,6 +355,14 @@ public final class SqliteTools {
         WRITE,
         DDL,
         ATTACH,
+        PRAGMA,
+        TRANSACTION,
         UNKNOWN
+    }
+
+    private record ParsedStatement(String sql, StatementType type) {
+    }
+
+    private record ParsedSql(List<ParsedStatement> statements) {
     }
 }
